--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -1,8 +1,8 @@
 .navbar {
   position: fixed;
-  top: 8.25vw; /* Coincide con la altura del HeaderBar */
+  top: 15%; /* Coincide con la altura del HeaderBar */
   width: 100%;
-  z-index: 2;
+  z-index: 999;
   display: flex;
   justify-content: center;
   font-family: Gabriola, sans-serif;
@@ -16,7 +16,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 50%; /* Reducir la altura del fondo */
+  height: 90%; /* Reducir la altura del fondo */
   background-color: #ACA5A1;
   opacity: 0.4; /* Opacidad solo en el fondo */
   z-index: 1;
@@ -26,7 +26,7 @@
 .navbar ul {
   list-style: none;
   display: flex;
-  gap: 2rem;
+  gap: 12rem;
   padding: 0;
   margin: 0;
   z-index: 2; /* Asegura que el texto esté por encima del fondo */
